--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.15",
     "motion": "^12.23.24",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-scroll": "^1.9.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
