--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "motion": "^12.23.24",
     "next": "16.0.3",
